profile back fix; review item spacing, Link to profile; filter Menu full hight

--- a/src/components/search/FilterMenu.module.css
+++ b/src/components/search/FilterMenu.module.css
@@ -2,7 +2,7 @@
   --_bottom: var(--bottom, -100%);
   padding: 20px;
   padding-top: 48px;
-  /* height: 80vh; */
+  height: 100vh;
   position: fixed;
   bottom: var(--_bottom);
   left: 0;
@@ -10,6 +10,8 @@
   background-color: white;
   z-index: 10;
   transition: bottom 1s ease-out;
+  display: flex;
+  flex-direction: column;
 }
 
 .active {
@@ -46,7 +48,8 @@
 }
 
 .buttons {
-  margin-top: 20px;
+  padding-top: 20px;
+  margin-top: auto;
   display: flex;
   gap: 10px;
 }
