--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,7 @@ input,
 :link {
   color: inherit;
 }
+
+a:visited {
+  color: inherit;
+}
